plugins {
	id 'java'
}

repositories {
	mavenCentral()
	maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
}

ext {
	jqwikVersion = '1.8.2'
	assertJVersion = '3.24.1'
	opentest4jVersion = '1.3.0'
	mockitoVersion = '4.11.0'
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

compileTestJava {
	options.compilerArgs += '-parameters'
	options.encoding = 'UTF-8'
}

test {
	useJUnitPlatform {
		includeEngines 'jqwik'
	}

	include '**/*Properties.class'
	include '**/*Test.class'
	include '**/*Tests.class'

// testLogging.events = ["passed", "failed", "skipped"]
// testLogging.showStandardStreams = true
}

dependencies {
	implementation("org.opentest4j:opentest4j:${opentest4jVersion}")

	testImplementation("net.jqwik:jqwik:${jqwikVersion}")
	testImplementation("net.jqwik:jqwik-testing:${jqwikVersion}")

	// Fluent assertions library
	testImplementation("org.assertj:assertj-core:${assertJVersion}")

	// Mockito dependency
	testImplementation("org.mockito:mockito-core:${mockitoVersion}")

	// To work around annoying bug in "IntelliJ's test runner"
	testImplementation("org.junit.jupiter:junit-jupiter-engine:5.9.1")

}

wrapper {
	gradleVersion = '8.5'
}
